fix sidebar image on mobile/ipad

--- a/css/case-study-interview.css
+++ b/css/case-study-interview.css
@@ -288,6 +288,7 @@ main{
 }
 .two-column .sidebar img{
   width: 90%;
+  max-width: 190px;
 }
 .karot-container{
   display: flex;
